--- a/register.html
+++ b/register.html
@@ -1,1 +1,10 @@
-This is register  page code
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Hello World Page</title>
+</head>
+<body>
+    <h1>Hello World!</h1>
+    <p>This is a simple HTML page.</p>
+</body>
+</html>
